--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -251,60 +251,54 @@ END
 IDD_CHANNELLIST DIALOGEX 22, 17, 357, 241
 STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | WS_VISIBLE | WS_CAPTION
 CAPTION "Channel List"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
+    GROUPBOX        "",IDC_STATIC,5,0,110,215,BS_CENTER,WS_EX_TRANSPARENT
     LISTBOX         IDC_PROGRAMLIST,10,10,100,182,LBS_NOINTEGRALHEIGHT | 
                     LBS_WANTKEYBOARDINPUT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "",IDC_SCAN_RADIO1,"Button",BS_AUTORADIOBUTTON | 
-                    BS_CENTER | BS_VCENTER | WS_TABSTOP,120,5,10,10
+    PUSHBUTTON      "Clear List",IDC_CLEAR,10,195,50,13,WS_GROUP
+    CONTROL         "Mute",IDC_CHANNEL_MUTE,"Button",BS_AUTOCHECKBOX | 
+                    BS_RIGHT | WS_TABSTOP,65,195,45,15,WS_EX_RIGHT
+    GROUPBOX        "Setup",IDC_STATIC,130,5,220,50,0,WS_EX_TRANSPARENT
     CONTROL         "Keyed numbers are channels, not positions (US Style)",
                     IDC_CUSTOMCHANNELORDER,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,135,20,210,8
     COMBOBOX        IDC_COUNTRY,136,34,160,75,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
-    CONTROL         "",IDC_SCAN_RADIO2,"Button",BS_AUTORADIOBUTTON | 
-                    BS_CENTER | BS_VCENTER | WS_TABSTOP,120,60,10,10
-    EDITTEXT        IDC_SCAN_MAX_FREQ,229,75,40,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "Scan",IDC_SCAN,300,35,45,12
+    GROUPBOX        "Full Frequency Scan Settings",IDC_STATIC,130,60,220,55
+    LTEXT           "From ",IDC_STATIC,140,75,31,15,SS_CENTERIMAGE
     EDITTEXT        IDC_SCAN_MIN_FREQ,175,75,40,12,ES_AUTOHSCROLL
+    LTEXT           "To",IDC_STATIC,220,75,13,15,SS_CENTERIMAGE
+    EDITTEXT        IDC_SCAN_MAX_FREQ,235,75,40,12,ES_AUTOHSCROLL
+    LTEXT           "MHz",IDC_STATIC,280,75,15,15,SS_CENTERIMAGE
+    LTEXT           "Steps Of",IDC_STATIC,140,94,35,15,SS_CENTERIMAGE
     EDITTEXT        IDC_SCAN_STEPS,175,95,40,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Hz",IDC_STATIC,220,95,13,15,SS_CENTERIMAGE
     CONTROL         "Use AFC",IDC_SCAN_AFC,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,229,95,45,15
-    COMBOBOX        IDC_CHANNEL,180,170,69,107,CBS_DROPDOWNLIST | WS_VSCROLL | 
+                    WS_TABSTOP,235,95,45,15
+    GROUPBOX        "Details",IDC_STATIC,130,120,220,115
+    LTEXT           "Name",IDC_STATIC,140,130,30,15,SS_CENTERIMAGE
+    EDITTEXT        IDC_NAME,180,130,161,12,ES_AUTOHSCROLL
+    LTEXT           "Frequency",IDC_STATIC,140,150,35,10,SS_CENTERIMAGE
+    EDITTEXT        IDC_FREQUENCY,180,150,44,12,ES_AUTOHSCROLL
+    LTEXT           "MHz",IDC_STATIC,230,150,25,15,SS_CENTERIMAGE
+    PUSHBUTTON      "Set",IDC_SETFREQ,260,150,45,13
+    SCROLLBAR       IDC_FINETUNE,315,150,22,13
+    LTEXT           "Channel",IDC_STATIC,140,170,29,12,SS_CENTERIMAGE
+    COMBOBOX        IDC_CHANNEL,180,170,41,107,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
     CONTROL         "Active",IDC_ACTIVE,"Button",BS_AUTOCHECKBOX | BS_LEFT | 
-                    BS_VCENTER | WS_TABSTOP,258,169,45,12
-    EDITTEXT        IDC_NAME,179,130,161,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_FREQUENCY,180,150,44,12,ES_AUTOHSCROLL
-    SCROLLBAR       IDC_FINETUNE,315,150,22,13
+                    BS_VCENTER | WS_TABSTOP,260,169,45,12
+    LTEXT           "Format",IDC_STATIC,140,190,34,11,SS_CENTERIMAGE
     COMBOBOX        IDC_FORMAT,180,190,160,60,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
     PUSHBUTTON      "Copy",IDC_ADD,141,215,45,12
     PUSHBUTTON      "Remove",IDC_REMOVE,191,215,45,12
-    PUSHBUTTON      "Set",IDC_SETFREQ,260,150,45,13
-    PUSHBUTTON      "Scan",IDC_SCAN,300,35,45,12
-    PUSHBUTTON      "Clear List",IDC_CLEAR,10,195,50,13,WS_GROUP
-    PUSHBUTTON      "Cancel",IDCANCEL,70,220,45,15,WS_GROUP
-    DEFPUSHBUTTON   "OK",IDOK,5,220,45,15,WS_GROUP
-    GROUPBOX        "Setup",IDC_STATIC,130,5,220,50,0,WS_EX_TRANSPARENT
-    GROUPBOX        "Details",IDC_STATIC,130,120,220,115
-    LTEXT           "Name",IDC_STATIC,140,130,30,15,SS_CENTERIMAGE
-    LTEXT           "Frequency",IDC_STATIC,140,150,35,10,SS_CENTERIMAGE
-    LTEXT           "MHz",IDC_STATIC,230,150,25,15,SS_CENTERIMAGE
-    LTEXT           "Channel",IDC_STATIC,140,170,29,12,SS_CENTERIMAGE
-    LTEXT           "Format",IDC_STATIC,140,190,34,11,SS_CENTERIMAGE
-    CTEXT           "To",IDC_STATIC,215,75,15,15,SS_CENTERIMAGE
-    LTEXT           "MHz",IDC_STATIC,275,75,15,15,SS_CENTERIMAGE
-    LTEXT           "Hz",IDC_STATIC,215,95,10,15,SS_CENTERIMAGE
-    LTEXT           "From ",IDC_STATIC,135,75,20,15,SS_CENTERIMAGE,
-                    WS_EX_RIGHT
-    LTEXT           "Steps Of",IDC_STATIC,139,95,30,15,SS_CENTERIMAGE
-    GROUPBOX        "",IDC_STATIC,5,0,110,215,BS_CENTER,WS_EX_TRANSPARENT
-    CONTROL         "Mute",IDC_CHANNEL_MUTE,"Button",BS_AUTOCHECKBOX | 
-                    BS_RIGHT | WS_TABSTOP,65,195,45,15,WS_EX_RIGHT
-    GROUPBOX        "AutoScan",IDC_STATIC,130,60,220,55
     PUSHBUTTON      "Up",IDC_UP,250,215,45,12
     PUSHBUTTON      "Down",IDC_DOWN,300,215,45,12
-    PUSHBUTTON      "Seek",IDC_SEEK,300,95,45,12
+    DEFPUSHBUTTON   "OK",IDOK,5,220,45,15,WS_GROUP
+    PUSHBUTTON      "Cancel",IDCANCEL,70,220,45,15,WS_GROUP
 END
 
 IDD_SPLASHBOX DIALOGEX 0, 0, 145, 192
