Renamed CT2388x to CX2388x

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -1615,9 +1615,9 @@ BEGIN
     END
 END
 
-IDC_CT2388X MENU DISCARDABLE 
+IDC_CX2388X MENU DISCARDABLE 
 BEGIN
-    POPUP "&CT Card"
+    POPUP "&CX Card"
     BEGIN
         POPUP "&Video Input"
         BEGIN
@@ -1654,7 +1654,7 @@ BEGIN
     END
 END
 
-IDC_CT2388X_H3D MENU DISCARDABLE 
+IDC_CX2388X_H3D MENU DISCARDABLE 
 BEGIN
     POPUP "&H3D Card"
     BEGIN
