--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -251,7 +251,7 @@ END
 IDD_CHANNELLIST DIALOGEX 22, 17, 357, 241
 STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | WS_VISIBLE | WS_CAPTION
 CAPTION "Channel List"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     GROUPBOX        "",IDC_STATIC,5,0,110,215,BS_CENTER,WS_EX_TRANSPARENT
     LISTBOX         IDC_PROGRAMLIST,10,10,100,182,LBS_NOINTEGRALHEIGHT | 
@@ -814,10 +814,10 @@ BEGIN
                     -1,7,106,286,17
     LTEXT           "CPU using",-1,15,130,41,10
     COMBOBOX        IDC_VIDEOCARD,73,188,178,190,CBS_DROPDOWNLIST | 
-                    WS_VSCROLL | WS_TABSTOP
+                    WS_DISABLED | WS_VSCROLL | WS_TABSTOP
     LTEXT           "DScaler can adapt its settings regarding the video card you are using.  Choose your video card below or select ""Other cards"" if your video card is not listed. (This setting is not detected)",
-                    -1,7,157,286,26
-    LTEXT           "Video card",-1,15,188,41,10
+                    -1,7,157,286,26,WS_DISABLED
+    LTEXT           "Video card",-1,15,188,41,10,WS_DISABLED
 END
 
 IDD_DSHOW_AUDIODEVICE DIALOG DISCARDABLE  0, 0, 166, 85
