--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -251,15 +251,16 @@ END
 IDD_CHANNELLIST DIALOGEX 22, 17, 357, 241
 STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | WS_VISIBLE | WS_CAPTION
 CAPTION "Channel List"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
-    GROUPBOX        "",IDC_STATIC,5,0,110,215,BS_CENTER,WS_EX_TRANSPARENT
-    LISTBOX         IDC_PROGRAMLIST,10,10,100,182,LBS_NOINTEGRALHEIGHT | 
+    GROUPBOX        "Channel List",IDC_STATIC,5,0,115,215,BS_LEFT,
+                    WS_EX_TRANSPARENT
+    LISTBOX         IDC_PROGRAMLIST,10,10,105,182,LBS_NOINTEGRALHEIGHT | 
                     LBS_WANTKEYBOARDINPUT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Clear List",IDC_CLEAR,10,195,50,13,WS_GROUP
+    PUSHBUTTON      "Clear List",IDC_CLEAR,10,196,50,13,WS_GROUP
     CONTROL         "Mute",IDC_CHANNEL_MUTE,"Button",BS_AUTOCHECKBOX | 
-                    BS_RIGHT | WS_TABSTOP,65,195,45,15,WS_EX_RIGHT
-    GROUPBOX        "Setup",IDC_STATIC,130,5,220,50,0,WS_EX_TRANSPARENT
+                    BS_RIGHT | WS_TABSTOP,70,196,45,15,WS_EX_RIGHT
+    GROUPBOX        "Setup",IDC_STATIC,130,0,220,50,0,WS_EX_TRANSPARENT
     CONTROL         "Keyed numbers are channels, not positions (US Style)",
                     IDC_CUSTOMCHANNELORDER,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,135,20,210,8
@@ -297,8 +298,9 @@ BEGIN
     PUSHBUTTON      "Remove",IDC_REMOVE,191,215,45,12
     PUSHBUTTON      "Up",IDC_UP,250,215,45,12
     PUSHBUTTON      "Down",IDC_DOWN,300,215,45,12
-    DEFPUSHBUTTON   "OK",IDOK,5,220,45,15,WS_GROUP
-    PUSHBUTTON      "Cancel",IDCANCEL,70,220,45,15,WS_GROUP
+    DEFPUSHBUTTON   "OK",IDOK,5,220,35,14,WS_GROUP
+    PUSHBUTTON      "Cancel",IDCANCEL,45,220,35,14,WS_GROUP
+    PUSHBUTTON      "&Help",IDC_HELPBTN,85,220,35,14,WS_GROUP
 END
 
 IDD_SPLASHBOX DIALOGEX 0, 0, 145, 192
@@ -1120,6 +1122,8 @@ BEGIN
             MENUITEM SEPARATOR
             MENUITEM "&Clipped (Add Black Bars if Necessary)\tCtrl+P", 
                                                     IDM_SASPECT_CLIP
+            MENUITEM SEPARATOR
+            MENUITEM "Analogue &Blanking",          IDM_ANALOGUE_BLANKING
         END
         POPUP "Aspect Ratio of &Display Screen"
         BEGIN
