--- a/DScaler/RegSpy/RegSpy.rc
+++ b/DScaler/RegSpy/RegSpy.rc
@@ -100,18 +100,16 @@ END
 // Dialog
 //
 
-IDD_MAINDIALOG DIALOG DISCARDABLE  0, 0, 211, 287
-STYLE DS_MODALFRAME | DS_NOIDLEMSG | DS_SETFOREGROUND | DS_NOFAILCREATE | 
-    DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+IDD_MAINDIALOG DIALOG DISCARDABLE  0, 0, 212, 286
+STYLE DS_NOIDLEMSG | DS_SETFOREGROUND | DS_NOFAILCREATE | DS_CENTER | 
+    WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "RegSpy"
 FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "Close",IDOK,154,266,50,14
     COMBOBOX        IDC_SOURCESELECT,80,7,124,157,CBS_DROPDOWNLIST | 
                     WS_DISABLED | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Reload",IDC_RELOAD,150,36,46,14,NOT WS_VISIBLE | 
-                    WS_DISABLED
-    CONTROL         "",IDC_REGDISPLAY,"Static",SS_ETCHEDFRAME,16,106,169,125
+    LTEXT           "",IDC_REGDISPLAY,16,106,169,125,NOT WS_GROUP
     SCROLLBAR       IDC_REGSCROLL,190,103,10,130,SBS_VERT | WS_DISABLED
     CONTROL         "Move Up Changes",IDC_MOVEUPCHANGES,"Button",
                     BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,12,241,75,10
@@ -122,8 +120,8 @@ BEGIN
     LTEXT           "Vendor ID:",IDC_STATIC,12,50,35,8
     LTEXT           "Device ID:",IDC_STATIC,12,61,35,8
     LTEXT           "Subsystem ID:",IDC_STATIC,12,72,46,8
-    GROUPBOX        "Hardware",IDC_STATIC,7,26,197,62
-    GROUPBOX        "Registers",IDC_STATIC,7,93,197,164
+    GROUPBOX        "Hardware",IDC_HARDWARE,7,26,197,62
+    GROUPBOX        "Registers",IDC_REGISTERS,7,93,197,164
     CONTROL         "Source Card",IDC_STATIC,"Static",SS_SIMPLE | 
                     SS_CENTERIMAGE | WS_GROUP,7,8,50,12
     LTEXT           "Not Applicable",IDC_CHIPTYPE,80,39,58,8
@@ -131,7 +129,7 @@ BEGIN
     LTEXT           "Not Applicable",IDC_DEVICEID,80,61,58,8
     LTEXT           "Not Applicable",IDC_SUBSYSTEMID,80,72,58,8
     PUSHBUTTON      "Refresh",IDC_REFRESH,68,84,50,14,NOT WS_VISIBLE
-    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,13,236,186,1
+    CONTROL         "",IDC_SEPARATOR,"Static",SS_ETCHEDHORZ,13,236,186,1
 END
 
 #endif    // English (Australia) resources
