Interrim Check in of Settings rewrite  - Removed SETTINGSEX structures and flags  - Removed Seperate settings per channel code  - Removed Settings flags  - Cut away some unused features

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -692,9 +692,9 @@ END
 IDD_TREESETTINGS_GENERIC DIALOGEX 0, 0, 197, 169
 STYLE DS_CONTROL | WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
-    LISTBOX         IDC_TREESETTINGS_GENERIC_LIST,0,37,197,73,LBS_SORT | 
+    LISTBOX         IDC_TREESETTINGS_GENERIC_LIST,0,0,197,112,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | 
                     WS_TABSTOP
     EDITTEXT        IDC_TREESETTINGS_GENERIC_EDIT,11,125,63,14,
@@ -712,25 +712,31 @@ BEGIN
                     NOT WS_VISIBLE
     COMBOBOX        IDC_TREESETTINGS_GENERIC_CHOOSEFROMLIST,11,127,123,75,
                     CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "",IDC_TREESETTINGS_GENERIC_TOPBOX,0,0,197,34
+    GROUPBOX        "",IDC_TREESETTINGS_GENERIC_TOPBOX,0,0,197,34,NOT 
+                    WS_VISIBLE
     GROUPBOX        "Value",IDC_TREESETTINGS_GENERIC_VALUEBOX,0,114,197,55
     CONTROL         "Global",IDC_TREESETTINGS_GENERIC_SAVEPER_GLOBAL,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,10,10,40,11
+                    BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,9,10,40,11
     CONTROL         "Video input",
                     IDC_TREESETTINGS_GENERIC_SAVEPER_VIDEOINPUT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,65,10,48,11
+                    BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,65,10,48,
+                    11
     CONTROL         "Source",IDC_TREESETTINGS_GENERIC_SAVEPER_SOURCE,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,10,21,40,11
+                    BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,10,21,40,
+                    11
     CONTROL         "Channel",IDC_TREESETTINGS_GENERIC_SAVEPER_CHANNEL,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,121,10,40,11
+                    "Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,
+                    121,10,40,11
     CONTROL         "Video format",
                     IDC_TREESETTINGS_GENERIC_SAVEPER_VIDEOFORMAT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,121,21,61,11
+                    BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,121,21,61,
+                    11
     LTEXT           "Global setting",IDC_TREESETTINGS_GENERIC_SETTINGINFO,10,
-                    10,177,8,NOT WS_VISIBLE
+                    10,177,8, NOT WS_VISIBLE
     CONTROL         "Audio input",
                     IDC_TREESETTINGS_GENERIC_SAVEPER_AUDIOINPUT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,65,21,51,11
+                    BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,65,21,51,
+                    11
 END
 
 IDD_TREESETTINGS_NOPROPERTIES DIALOG DISCARDABLE  0, 0, 186, 141
@@ -1177,10 +1183,12 @@ BEGIN
         MENUITEM "&Overlay Adjustments ...",    IDM_OVERLAYSETTINGS
         MENUITEM "&Advanced Settings...",       IDM_SETTINGS_CHANGESETTINGS
         MENUITEM SEPARATOR
-        MENUITEM "&Save settings per channel",  ID_SETTINGS_SAVESETTINGSPERCHANNEL
+        MENUITEM "&Save settings per Channel",  ID_SETTINGS_SAVESETTINGSPERCHANNEL
 
-        MENUITEM "Clear Channel Settings",      ID_SETTINGS_CLEARCHANNELSETTINGS
-        , GRAYED
+        MENUITEM "Save settings per &Input",    ID_SETTINGS_SAVESETTINGSPERINPUT
+
+        MENUITEM "Save settings per &Format",   ID_SETTINGS_SAVESETTINGSPERFORMAT
+
         MENUITEM SEPARATOR
         MENUITEM "&Keyboard Lock\tCtrl+Shift+L", IDM_KEYBOARDLOCK
     END
