--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -491,7 +491,7 @@ BEGIN
     CTEXT           "Copyright © 2000-2002 John Adcock",IDC_STATIC,0,27,277,
                     10
     GROUPBOX        "License Information",IDC_STATIC,0,39,277,82
-    CTEXT           "http://www.dscaler.org",IDC_LINK2,0,15,277,9,SS_NOTIFY | 
+    CTEXT           "http://www.dscaler.org",IDC_LINK,0,15,277,9,SS_NOTIFY | 
                     SS_SUNKEN
     LTEXT           "This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.",
                     IDC_STATIC,3,51,273,26
@@ -991,9 +991,18 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Image Size Settings"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "&OK",IDOK,13,219,45,15
-    PUSHBUTTON      "Cancel",IDCANCEL,65,219,45,15,WS_GROUP
-    PUSHBUTTON      "&Default",IDC_DEFAULT,121,219,45,15
+    GROUPBOX        "Size and Position Controls at the chip level",
+                    IDC_STATIC,13,14,355,59
+    LTEXT           "&Horizontal Delay",IDC_STATIC,25,29,31,16
+    CONTROL         "Slider1",IDC_SLIDER5,"msctls_trackbar32",TBS_TOP | 
+                    WS_TABSTOP,59,25,258,20
+    EDITTEXT        IDC_D5,323,28,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_DISABLED | NOT WS_TABSTOP
+    LTEXT           "&Vertical Delay",IDC_STATIC,25,48,28,17
+    CONTROL         "Slider1",IDC_SLIDER6,"msctls_trackbar32",TBS_TOP | 
+                    WS_TABSTOP,59,45,258,20
+    EDITTEXT        IDC_D6,323,48,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_DISABLED | NOT WS_TABSTOP
     GROUPBOX        "Overscan Controls",IDC_STATIC,13,85,355,122
     LTEXT           "&Top",IDC_STATIC,26,126,27,10
     CONTROL         "Slider1",IDC_SLIDER1,"msctls_trackbar32",TBS_TOP | 
@@ -1015,18 +1024,9 @@ BEGIN
                     WS_TABSTOP,60,178,258,20
     EDITTEXT        IDC_D4,324,181,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED | NOT WS_TABSTOP
-    GROUPBOX        "Size and Position Controls at the chip level",
-                    IDC_STATIC,13,14,355,59
-    LTEXT           "&Horizontal Delay",IDC_STATIC,25,29,31,16
-    CONTROL         "Slider1",IDC_SLIDER5,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,59,25,258,20
-    EDITTEXT        IDC_D5,323,28,35,12,ES_CENTER | ES_AUTOHSCROLL | 
-                    WS_DISABLED | NOT WS_TABSTOP
-    LTEXT           "&Vertical Delay",IDC_STATIC,25,48,28,17
-    CONTROL         "Slider1",IDC_SLIDER6,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,59,45,258,20
-    EDITTEXT        IDC_D6,323,48,35,12,ES_CENTER | ES_AUTOHSCROLL | 
-                    WS_DISABLED | NOT WS_TABSTOP
+    DEFPUSHBUTTON   "&OK",IDOK,13,219,45,15
+    PUSHBUTTON      "Cancel",IDCANCEL,65,219,45,15,WS_GROUP
+    PUSHBUTTON      "&Default",IDC_DEFAULT,121,219,45,15
 END
 
 
