Put correct version in the toolbar

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -952,12 +952,12 @@ BEGIN
                     BS_ICON | WS_TABSTOP,104,0,30,16
 END
 
-IDD_TOOLBAR_LOGO DIALOG DISCARDABLE  0, 0, 62, 8
+IDD_TOOLBAR_LOGO DIALOG DISCARDABLE  0, 0, 84, 8
 STYLE WS_CHILD | WS_CLIPSIBLINGS | WS_CLIPCHILDREN
 FONT 14, "MS Sans Serif"
 BEGIN
-    CONTROL         "DScaler version 4.0",IDC_TOOLBAR_LOGO_LOGO,"Static",
-                    SS_LEFTNOWORDWRAP | SS_CENTERIMAGE | WS_GROUP,1,0,61,8
+    RTEXT           "DScaler Version 4.0.0",IDC_TOOLBAR_LOGO_LOGO,9,0,72,8,
+                    SS_CENTERIMAGE
 END
 
 IDD_TOOLBAR_VIDEOINPUT DIALOG DISCARDABLE  0, 0, 84, 12
@@ -1818,8 +1818,8 @@ BEGIN
 
     IDD_TOOLBAR_LOGO, DIALOG
     BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 55
+        LEFTMARGIN, 2
+        RIGHTMARGIN, 81
         TOPMARGIN, 7
         BOTTOMMARGIN, 1
     END
