First step to merge setup hardware and hardware info dialog boxes CPU flag information moved in the general hardware dialog box

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -219,14 +219,13 @@ END
 // Dialog
 //
 
-IDD_HWINFO DIALOG DISCARDABLE  22, 17, 202, 166
+IDD_HWINFO DIALOG DISCARDABLE  22, 17, 202, 116
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "DScaler Hardware Information"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,65,150,65,14,WS_GROUP
+    DEFPUSHBUTTON   "OK",IDOK,65,98,65,14,WS_GROUP
     GROUPBOX        "Hardware",IDC_STATIC,3,0,195,95
-    GROUPBOX        "Other",IDC_STATIC,3,105,195,43
     LTEXT           "Video Decoder:",IDC_STATIC,5,15,51,10
     LTEXT           "",IDC_BT_CHIP_TYPE,66,15,125,10
     LTEXT           "Vendor ID:",IDC_STATIC,5,25,40,10
@@ -241,10 +240,6 @@ BEGIN
     LTEXT           "",IDC_AUDIO_DECODER_TYPE,66,70,125,10
     LTEXT           "Videotext:",IDC_STATIC,5,79,40,10
     LTEXT           "",IDC_VIDEO_TEXT_TYPE,66,79,125,10
-    LTEXT           "Overlay:",IDC_STATIC,5,120,45,10
-    LTEXT           "",IDC_OVERLAY,66,120,125,10
-    LTEXT           "CPU:",IDC_STATIC,5,135,45,10
-    LTEXT           "",IDC_CPU_TYPE,66,135,125,10
 END
 
 IDD_CHANNELLIST DIALOGEX 22, 17, 357, 241
@@ -499,14 +494,14 @@ BEGIN
                     IDC_STATIC,3,78,274,35
 END
 
-IDD_SELECTCARD DIALOG DISCARDABLE  0, 0, 300, 129
+IDD_SELECTCARD DIALOG DISCARDABLE  0, 0, 300, 161
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Card & Tuner Setup"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,7,108,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,65,108,50,14
-    PUSHBUTTON      "&Auto-Detect",IDC_AUTODETECT,201,108,50,14
+    DEFPUSHBUTTON   "OK",IDOK,7,138,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,65,138,50,14
+    PUSHBUTTON      "&Auto-Detect",IDC_AUTODETECT,201,138,50,14
     COMBOBOX        IDC_CARDSSELECT,73,57,178,190,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_TUNERSELECT,73,80,178,190,CBS_DROPDOWNLIST | 
@@ -517,6 +512,14 @@ BEGIN
                     IDC_STATIC,7,34,286,22
     LTEXT           "Card",IDC_STATIC,14,58,34,9
     LTEXT           "Tuner",IDC_STATIC,14,80,38,9
+    LTEXT           "Video Decoder:",IDC_STATIC,12,104,51,10
+    LTEXT           "",IDC_BT_CHIP_TYPE,76,104,63,10
+    LTEXT           "Vendor ID:",IDC_STATIC,162,104,40,10
+    LTEXT           "",IDC_BT_VENDOR_ID,209,104,63,10
+    LTEXT           "Device ID:",IDC_STATIC,162,118,40,10
+    LTEXT           "",IDC_BT_DEVICE_ID,209,118,64,10
+    LTEXT           "Auto Detect ID:",IDC_STATIC,12,118,50,10
+    LTEXT           "",IDC_BT_AUTODECTECT_ID,76,118,65,10
 END
 
 IDD_DISASM_CRASH DIALOG DISCARDABLE  0, 0, 399, 234
@@ -727,7 +730,7 @@ BEGIN
                     10
 END
 
-IDD_HWSETUP DIALOG DISCARDABLE  0, 0, 300, 178
+IDD_HWSETUP DIALOG DISCARDABLE  0, 0, 313, 178
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "General Hardware Setup"
 FONT 8, "MS Sans Serif"
@@ -749,6 +752,7 @@ BEGIN
     LTEXT           "DScaler can use your full CPU for best results or keep CPU for other applications running at the same time. Choose the option below that best matches your preferences.",
                     -1,7,106,286,17
     LTEXT           "CPU using",-1,15,130,41,10
+    LTEXT           "",IDC_CPU_TYPE,259,37,42,10
 END
 
 IDD_DSHOW_AUDIODEVICE DIALOG DISCARDABLE  0, 0, 166, 85
@@ -1681,6 +1685,7 @@ BEGIN
         END
         MENUITEM SEPARATOR
         MENUITEM "&Setup Hardware ...",         IDM_SETUPCARD
+        MENUITEM "&Hardware Info ...",          IDM_HWINFO
         MENUITEM "Reset Capture Card",          IDM_RESET
     END
 END
@@ -1773,6 +1778,11 @@ IDC_CURSOR_HAND         CURSOR  DISCARDABLE     "hand_point.cur"
 #ifdef APSTUDIO_INVOKED
 GUIDELINES DESIGNINFO DISCARDABLE 
 BEGIN
+    IDD_SELECTCARD, DIALOG
+    BEGIN
+        BOTTOMMARGIN, 160
+    END
+
     IDD_OVERLAYSETTINGS, DIALOG
     BEGIN
         LEFTMARGIN, 5
@@ -1783,6 +1793,7 @@ BEGIN
 
     IDD_HWSETUP, DIALOG
     BEGIN
+        RIGHTMARGIN, 300
         BOTTOMMARGIN, 177
     END
 
