--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -753,19 +753,23 @@ BEGIN
     LTEXT           "",IDC_CPU_TYPE,259,37,42,10
 END
 
-IDD_DSHOW_AUDIODEVICE DIALOG DISCARDABLE  0, 0, 166, 85
+IDD_DSHOW_AUDIODEVICE DIALOG DISCARDABLE  0, 0, 166, 134
 STYLE DS_CONTROL | WS_CHILD
 FONT 8, "MS Sans Serif"
 BEGIN
-    GROUPBOX        "",IDC_STATIC,0,0,165,85
+    GROUPBOX        "",IDC_DSHOW_AUDIODEVICE_GRPBOX,0,0,165,85
     CONTROL         "Use default audio device",
                     IDC_DSHOW_AUDIODEVICE_USEDEFAULT,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,5,0,95,10
-    COMBOBOX        IDC_DSHOW_AUDIODEVICE_DEVICE,35,15,124,30,
+    COMBOBOX        IDC_DSHOW_AUDIODEVICE_DEVICE,35,15,124,55,
                     CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Device:",IDC_STATIC,5,15,26,8
+    LTEXT           "Device:",IDC_DSHOW_AUDIODEVICE_DEVICE_LABEL,5,15,26,8
     LTEXT           "Note: Changes to this setting will not take effect immediately.\nThis setting will be ignored if you open a file that don't have any audio or if you have a capture card which is connected to the audio card by a cable.",
-                    IDC_STATIC,5,30,149,50
+                    IDC_DSHOW_AUDIODEVICE_DEVICE_TEXT,5,30,149,50
+    CONTROL         "Don't connect audio",IDC_DSHOW_AUDIODEVICE_RENDER,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,5,90,155,10
+    LTEXT           "This is usefull for devices that support both internal audio (via device driver) and external (via a cable to audio card) when you only want to use external audio.",
+                    IDC_DSHOW_AUDIODEVICE_TEXT2,15,100,145,35
 END
 
 IDD_DSHOW_VIDEOFMTS DIALOG DISCARDABLE  0, 0, 207, 141
